eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/PF_Arrears_History__c.object
<CustomObject>
    <fields>
        <fullName>Date_entered_collections__c</fullName>
        <label>Date entered collections</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_exited_collections__c</fullName>
        <label>Date exited collections</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_write_off__c</fullName>
        <label>Date of write off</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_months_in_arrears__c</fullName>
        <label>Number of months in arrears</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum_of_balance_in_arrears__c</fullName>
        <label>Sum of balance in arrears</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_balance_outstanding__c</fullName>
        <label>Total balance outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PF Arrears History</label>
    <nameField>
        <label>PF Arrears History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PF Arrears Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>